WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
129918
[CSS Shapes] inset corner radii are not flipped for vertical writing modes
https://bugs.webkit.org/show_bug.cgi?id=129918
Summary
[CSS Shapes] inset corner radii are not flipped for vertical writing modes
Bem Jones-Bey
Reported
2014-03-07 14:30:02 PST
Created
attachment 226168
[details]
example Inset always applies the corner radii in physical coordinates, causing radii with different width/height to not work properly. See the attached test case.
Attachments
example
(800 bytes, text/html)
2014-03-07 14:30 PST
,
Bem Jones-Bey
no flags
Details
Patch
(14.52 KB, patch)
2014-03-10 15:31 PDT
,
Bem Jones-Bey
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Bem Jones-Bey
Comment 1
2014-03-10 15:31:16 PDT
Created
attachment 226341
[details]
Patch
WebKit Commit Bot
Comment 2
2014-03-10 21:25:14 PDT
Comment on
attachment 226341
[details]
Patch Clearing flags on attachment: 226341 Committed
r165429
: <
http://trac.webkit.org/changeset/165429
>
WebKit Commit Bot
Comment 3
2014-03-10 21:25:16 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug