[CSS Shapes] inset corner radii are not flipped for vertical writing modes https://bugs.webkit.org/show_bug.cgi?id=129918

Reviewed by Dean Jackson.

Source/WebCore:

When creating an inset shape, convert the radii to logical coordinates
as well as the box.

Tests: fast/shapes/shape-outside-floats/shape-outside-floats-inset-rounded-different-writing-modes-left.html
       fast/shapes/shape-outside-floats/shape-outside-floats-inset-rounded-different-writing-modes-right.html

* rendering/shapes/Shape.cpp:
(WebCore::Shape::createShape): Convert the radii to logical
    coordinates.

LayoutTests:

Test both left and right float cases so that we cover all four
corners.

* fast/shapes/shape-outside-floats/shape-outside-floats-inset-rounded-different-writing-modes-left-expected.txt: Added.
* fast/shapes/shape-outside-floats/shape-outside-floats-inset-rounded-different-writing-modes-left.html: Added.
* fast/shapes/shape-outside-floats/shape-outside-floats-inset-rounded-different-writing-modes-right-expected.txt: Added.
* fast/shapes/shape-outside-floats/shape-outside-floats-inset-rounded-different-writing-modes-right.html: Added.


Canonical link: https://commits.webkit.org/148047@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@165429 268f45cc-cd09-0410-ab3c-d52691b4dbfc